passa baixa antes de busca por 3 pontos