@@ -17,12 +17,12 @@
 package com.google.zxing.client.j2se;
 
 import javax.imageio.ImageIO;
-import javax.xml.bind.DatatypeConverter;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URLDecoder;
+import java.util.Base64;
 
 /**
  * Encapsulates reading URIs as images.
@@ -63,7 +63,8 @@ public final class ImageReader {
     }
     String base64DataEncoded = uriString.substring(base64Start + BASE64TOKEN.length());
     String base64Data = URLDecoder.decode(base64DataEncoded, "UTF-8");
-    byte[] imageBytes = DatatypeConverter.parseBase64Binary(base64Data);
+    byte[] imageBytes = Base64.getDecoder().decode(base64Data);//DatatypeConverter.parseBase64Binary(base64Data);
+    
     return ImageIO.read(new ByteArrayInputStream(imageBytes));
   }
 
